Fixed Header Z-index

--- a/Teacher_template/assets/css/style.css
+++ b/Teacher_template/assets/css/style.css
@@ -25,6 +25,7 @@ section {
   top: 0;
   right: 0;
   left: 0;
+  z-index: 500;
 }
 
 .nav-bar {
